@@ -19,8 +19,8 @@ jobs:
     - name: configure
       run: ./configure --with-tests
     - name: make
-      run: make
+      run: make -j 2
     - name: make check
       run: make check
     - name: make distcheck
-      run: make distcheck
+      run: make -j 2 distcheck
